add save mocks button

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
 	"globals": {
 		"chrome": true
 	},
+	"parserOptions": {
+		"ecmaVersion": 6
+	},
 	"rules": {
 		"strict": 0,
 		"no-use-before-define": 0,
