--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,15 @@
     "manifest_version": 2,
     "permissions": [
         "clipboardWrite",
-        "storage"
+        "storage",
+        {
+            "fileSystem": [
+                "write",
+                "retainEntries",
+                "directory",
+                "requestFileSystem"
+            ]
+        },
+        "downloads"
     ]
 }
