--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "copy-request",
+    "name": "cypress-mocks",
     "version": "1.0",
     "minimum_chrome_version": "18.0",
     "devtools_page": "index.html",
